# holderscan-dca

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
programs/holderscan-dca/: Cargo.toml
programs/holderscan-dca/src/: errors.rs  events.rs  lib.rs
programs/holderscan-dca/src/instructions/: accept_admin.rs  cancel_order.rs  create_order.rs  execute_cycle.rs  initialize_config.rs  mod.rs  propose_admin.rs  refund_cycle.rs  update_config.rs
programs/holderscan-dca/src/state/: dca_config.rs  dca_order.rs  mod.rs
programs/holderscan-dca/tests/: test_admin.rs  test_initialize.rs  test_orders.rs
programs/holderscan-dca/tests/helpers/: mod.rs
scripts/: init-config.ts
tests/: place-orders.ts  smoke.ts
