[package]
name = "holderscan-dca"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "holderscan_dca"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
solana-security-txt = "1.1.1"

[dev-dependencies]
litesvm = "0.11.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-account = "3.4.0"
solana-clock = "3.0.1"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
spl-token-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
